
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int usec_t ;
typedef char* uid_t ;
typedef int time_t ;
struct rlimit {int member_1; int member_0; } ;
struct pid_stat {int dummy; } ;
typedef int pid_t ;
typedef int heartbeat_t ;
struct TYPE_4__ {int filename; } ;
struct TYPE_3__ {int filename; } ;


 int * CONFIG_DIR ;
 int FILENAME_MAX ;
 int * LIBCONFIG_DIR ;
 int O_NOFOLLOW ;
 int O_RDONLY ;
 int PR_SET_DUMPABLE ;
 unsigned long long RATES_DETAIL ;
 int RLIMIT_CORE ;
 int RLIM_INFINITY ;
 int USEC_PER_SEC ;
 int _SC_PAGESIZE ;
 TYPE_2__ all_group_ids ;
 void* all_pids ;
 void* all_pids_sortlist ;
 TYPE_1__ all_user_ids ;
 int am_i_running_as_root () ;
 int apps_groups_root_target ;
 int calculate_netdata_statistics () ;
 void* callocz (int,size_t) ;
 int check_capabilities () ;
 int check_proc_1_io () ;
 int collect_data_for_all_processes () ;
 scalar_t__ debug_flags ;
 int debug_log (char*,int) ;
 int enable_groups_charts ;
 int enable_users_charts ;
 int error (char*,...) ;
 int error_log_errors_per_period ;
 scalar_t__ error_log_syslog ;
 int error_log_throttle_period ;
 int exit (int) ;
 int fflush (int ) ;
 int get_system_HZ () ;
 int get_system_cpus () ;
 int get_system_pid_max () ;
 void* getenv (char*) ;
 char* geteuid () ;
 int getpid () ;
 char* getuid () ;
 int global_iterations_counter ;
 int groups_root_target ;
 int heartbeat_init (int *) ;
 int heartbeat_next (int *,int) ;
 int info (char*,...) ;
 scalar_t__ likely (int ) ;
 void* netdata_configured_host_prefix ;
 int normalize_utilization (int ) ;
 int now_monotonic_sec () ;
 size_t pagesize ;
 int parse_args (int,char**) ;
 scalar_t__ pid_max ;
 int prctl (int ,int,int ,int ,int ) ;
 int printf (char*) ;
 int procfile_adaptive_initial_allocation ;
 int procfile_open_flags ;
 char* program_name ;
 int send_charts_updates_to_netdata (int ,char*,char*) ;
 int send_collected_data_to_netdata (int ,char*,int) ;
 int send_resource_usage_to_netdata (int) ;
 scalar_t__ setrlimit (int ,struct rlimit*) ;
 int show_guest_time ;
 int show_guest_time_old ;
 int snprintfz (int,int ,char*,void*) ;
 int stdout ;
 int * stock_config_dir ;
 scalar_t__ sysconf (int ) ;
 unsigned long long system_hz ;
 unsigned long long time_factor ;
 scalar_t__ unlikely (int) ;
 int update_every ;
 int * user_config_dir ;
 int users_root_target ;
 int verify_netdata_host_prefix () ;

int main(int argc, char **argv) {


    pagesize = (size_t)sysconf(_SC_PAGESIZE);


    program_name = "apps.plugin";


    error_log_syslog = 0;


    error_log_errors_per_period = 100;
    error_log_throttle_period = 3600;


    procfile_open_flags = O_RDONLY|O_NOFOLLOW;

    netdata_configured_host_prefix = getenv("NETDATA_HOST_PREFIX");
    if(verify_netdata_host_prefix() == -1) exit(1);

    user_config_dir = getenv("NETDATA_USER_CONFIG_DIR");
    if(user_config_dir == ((void*)0)) {

        user_config_dir = CONFIG_DIR;
    }


    stock_config_dir = getenv("NETDATA_STOCK_CONFIG_DIR");
    if(stock_config_dir == ((void*)0)) {

        stock_config_dir = LIBCONFIG_DIR;
    }
    procfile_adaptive_initial_allocation = 1;

    time_t started_t = now_monotonic_sec();

    get_system_HZ();



    time_factor = system_hz;


    get_system_pid_max();
    get_system_cpus();

    parse_args(argc, argv);

    if(!check_capabilities() && !am_i_running_as_root() && !check_proc_1_io()) {
        uid_t uid = getuid(), euid = geteuid();
        error("apps.plugin should either run as root (now running with uid %u, euid %u) or have special capabilities. "
                      "Without these, apps.plugin cannot report disk I/O utilization of other processes. "
                      "Your system does not support capabilities. "
                      "To enable setuid to root run: sudo chown root:netdata %s; sudo chmod 4750 %s; "
              , uid, euid, argv[0], argv[0]
        );

    }

    info("started on pid %d", getpid());

    snprintfz(all_user_ids.filename, FILENAME_MAX, "%s/etc/passwd", netdata_configured_host_prefix);
    debug_log("passwd file: '%s'", all_user_ids.filename);

    snprintfz(all_group_ids.filename, FILENAME_MAX, "%s/etc/group", netdata_configured_host_prefix);
    debug_log("group file: '%s'", all_group_ids.filename);


    all_pids_sortlist = callocz(sizeof(pid_t), (size_t)pid_max);


    all_pids = callocz(sizeof(struct pid_stat *), (size_t) pid_max);

    usec_t step = update_every * USEC_PER_SEC;
    global_iterations_counter = 1;
    heartbeat_t hb;
    heartbeat_init(&hb);
    for(;1; global_iterations_counter++) {
        usec_t dt = heartbeat_next(&hb, step);


        if(!collect_data_for_all_processes()) {
            error("Cannot collect /proc data for running processes. Disabling apps.plugin...");
            printf("DISABLE\n");
            exit(1);
        }

        calculate_netdata_statistics();
        normalize_utilization(apps_groups_root_target);

        send_resource_usage_to_netdata(dt);


        send_charts_updates_to_netdata(apps_groups_root_target, "apps", "Apps");

        if(likely(enable_users_charts))
            send_charts_updates_to_netdata(users_root_target, "users", "Users");

        if(likely(enable_groups_charts))
            send_charts_updates_to_netdata(groups_root_target, "groups", "User Groups");

        send_collected_data_to_netdata(apps_groups_root_target, "apps", dt);

        if(likely(enable_users_charts))
            send_collected_data_to_netdata(users_root_target, "users", dt);

        if(likely(enable_groups_charts))
            send_collected_data_to_netdata(groups_root_target, "groups", dt);

        fflush(stdout);

        show_guest_time_old = show_guest_time;

        debug_log("done Loop No %zu", global_iterations_counter);


        if(now_monotonic_sec() - started_t > 14400) exit(0);
    }
}
